--- a/src/components/ProductInfoPage/ProductInfoPage.css
+++ b/src/components/ProductInfoPage/ProductInfoPage.css
@@ -3,16 +3,74 @@
   display: grid;
 }
 
-.product-info-page .product {
+.product-info-page > .product {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
   width: 80%;
   margin: auto;
+  margin-bottom: 4rem;
 }
 
-.product-info-page .product img {
+.product-info-page > .product img {
   width: 400px;
   max-height: 400px;
   object-fit: contain;
+  margin: auto;
+}
+
+.product-info-page h1 {
+  font-size: 3.5rem;
+  margin: 0;
+  margin-bottom: 2rem;
+}
+
+.product-info-page h2 {
+  color: rgb(100, 100, 100);
+  font-size: 1.5rem;
+}
+
+.product-info-page .options {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin: 3rem 0;
+}
+
+.product-info-page input {
+  align-self: normal;
+  width: 3rem;
+  text-align: center;
+  font-size: 1rem;
+  border: 1px solid black;
+  border-radius: 0;
+}
+
+.product-info-page input:focus {
+  border: 1px solid rgba(0, 0, 0, 0);
+  outline: 2px solid var(--green);
+}
+
+.product-info-page h3 {
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.product-info-page p {
+  color: rgb(100, 100, 100);
+  line-height: 1.5rem;
+}
+
+.product-info-page .related {
+  display: grid;
+}
+
+.product-info-page .related .products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 4rem;
 }
