--- a/src/index.css
+++ b/src/index.css
@@ -222,3 +222,22 @@ body {
 .toast {
   border: 1px solid var(--green);
 }
+
+/* <----------CONSTRUCTION PAGE----------> */
+
+.construction {
+  margin: auto;
+  margin-top: 14rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.construction h2 {
+  font-size: 2rem;
+}
+
+.construction span {
+  font-size: 15rem;
+  color: var(--dark-orange);
+}
